[package]
name = "xcomplex"
version = "0.1.0"
edition = "2021"
authors = ["Omar Belghaouti <omarbelghaouti@gmail.com>"]
description = "A complex number library"
license-file = "LICENSE"
repository = "https://github.com/Omar-Belghaouti/complex"
readme = "README.md"
keywords = ["complex", "number", "math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
